# Imageworm

./: README.md  Run_Imageworm.sh  env_setup.sh  main.py  setup.py  test2
Imageworm.egg-info/: PKG-INFO  SOURCES.txt
docs/: matlabParams
docs/Matlab Params/: matlabParams
docs/parameters/: Crypts_3u_19tps  Matlab_67slices115timepoints  Matlab_67slices170timepts  Matlab_Feb2011Param  Matlab_GreenBright220tp.txt~  Matlab_GreenBright240tp.txt  Matlab_GreenBright85tp.txt  Matlab_GreenFeb2011Param  Matlab_GreenJan2011Param  Matlab_GreenJuly2017Param_dim.txt  Matlab_GreenJune2011Param120tp  Matlab_GreenJune2011Param66plane  Matlab_GreenJune2011Param_210tp  Matlab_GreenJune2011Param_220tp.txt  Matlab_GreenJune2011Param_225tp  Matlab_GreenJune2011Param_dim_210tp  Matlab_GreenMay2014ParamBright  Matlab_GreenMay2014ParamBright_180tp  Matlab_July2011Param_67pl_130tp  Matlab_July2011Param_67pl_160tp  Matlab_July2011Param_67pl_180tp  Matlab_July2011Param_67pl_30tp  Matlab_July2011Param_67pl_60tp  Matlab_Red57slices  Matlab_Red66slices260timepts  Matlab_Red67slices180timepts  Matlab_RedBright100timepts  Matlab_RedBright120timepts  Matlab_RedBright170timepts~  Matlab_RedDimLateJune2014_240tp  Matlab_RedJune2014_234tp  Matlab_Red_210timepts_dim.txt  greenParameters  redParameters  redParameters_dim  redParameters_less_splitting
lib/: matlabParams
lib/DB-Java/: manifest.txt  mparmDEFAULT.txt  starrynite-debug
lib/Fiji.app/: .checksums  ImageJ.cfg  ImageJ2.desktop
lib/starrynite-code/: .gitignore  .project  Doxyfile  HACKING  Makefile.am  Makefile.in  TODO  doxygen.am
lib/starrynite_traceonly/: starrynite
lib/starrynite_traceonly/tmp/canned_starrynite-1.3.3/: INSTALL  Makefile  Makefile.in  configure  configure.ac  convertnames.prl.txt
lib/starrynite_traceonly/tmp/canned_starrynite-1.3.3/build-aux/: config.h  config.h.in
lib/starrynite_traceonly/tmp/canned_starrynite-1.3.3/lib/: Makefile.am  Makefile.in  string.h
lib/starrynite_traceonly/tmp/canned_starrynite-1.3.3/nuclei/: t003-nuclei  t005-nuclei  t006-nuclei  t009-nuclei
lib/starrynite_traceonly/tmp/canned_starrynite-1.3.3/src/: Makefile  Makefile.am  Makefile.in  c_file-parameters  cell-identity.c  error-codes.h  image-manipulation.h  matlab-parameters-file-newscope_blank.txt  matlab-parameters-file-newscope_pie1.txt  maxmemory  noise-filter.c  nuclei.h  parameters-file-newscope.txt  parameters-hash.c  parameters-hash.gperf  parameters-tools.c  parameters-tools.h  process_sequence_development.prl  report-lineage.c  report-lineage.h  run_starrynite_loaderversion.prl  sliding-box.h  sn_parameterfile.txt  starrynite.c  starrynite_for_mouse_drosophila.exe.stackdump  tracing-original.c  tracing_junk.c  types.h  zia02100  zia02528  zia03232  zia04008  zia06020
lib/starrynite_traceonly/tmp/canned_starrynite-1.3.3/src/.deps/: noise-filter.Po  nuclei.Po  parameters-tools.Po  report-lineage.Po  sliding-box.Po
lib/starrynite_traceonly/tmp/canned_starrynite-1.3.3/src/autom4te.cache/: requests
lib/starrynite_traceonly/tmp/canned_starrynite-1.3.3/src/test/: Makefile
lib/starrynite_traceonly/tmp/canned_starrynite-1.3.3/tests/: Makefile.am  Makefile.in
lib/tools/: FSConvert.py  Input.xml  Picpipeline.py  acebatch3.pl  bla.py  makeDBEntry.pl  matlab_SN_cluster.pl  nd2pipline.py  read_xml.py  rename.py  standard_pipeline.sh
worm/: DB_Manager.py  __init__.py  dem0_temp.py  subMenu.py  worm.py  worm_0.py  worm_1.5.py  worm_1.py  worm_2.py  worm_3.py
worm/Fiji.app/: ImageJ2.desktop
worm/Starrynite_AceTree_distribution_7_13_2015/: 2015_dispim_singleview_param.txt  2015_mipav_decon_dispim_param.txt  Lineage_Editing_Notes.doc  Red_parameterfile.txt  Thumbs.db  matlab-parameters-file-newscope_middle_weak_thresholds_journalV_besthack_nodata.txt  minimanual.docx
worm/helpers/: FSConvert.py  Ianalysis.py  TextEditor_Code.py  rerunMenu.py  subMenu.py
worm/parameters/: Crypts_3u_65tps  Crypts_3u_97m  Matlab_dim  (+20 more)
worm/tools/starrynite-code/: aclocal.m4  configure  configure.ac
worm/tools/starrynite-code/baolab/acetree/source/: StarryniteLauncher.java
worm/tools/starrynite-code/baolab/acetree/source/org/rhwlab/acetree/: AceAtlas.java
worm/tools/starrynite-code/baolab/acetree/source/org/rhwlab/analyze/: Analysis2.java  Analysis6.java
worm/tools/starrynite-code/baolab/acetree/source/org/rhwlab/image/: AuxImageWindowYZ.java  Image3D2.java  Image3DGeometryManager.java  Image3DViewConfig.java  ImageParmsDialog.java  ImageWindow.java  SublineageDisplayProperty.java
worm/tools/starrynite-code/baolab/acetree/source/org/rhwlab/nucedit/: AddOneDialog.java
worm/tools/starrynite-code/baolab/acetree/source/org/rhwlab/snight/: NucZipper.java
worm/tools/starrynite-code/baolab/acetree/source/org/rhwlab/tree/: AncesTree.java
worm/tools/starrynite-code/baolab/starrynite/frontend/: detect_track_driver_allmatlab.m
worm/tools/starrynite-code/baolab/starrynite/segmentation/: compareDetectionWRadius_3_nonconflict.asv
worm/tools/starrynite-code/build-aux/: config.h.in
worm/tools/starrynite-code/lib/gnulib/: Makefile.in  stdio.h  stdlib.h  string.h
worm/tools/starrynite-code/lib/starrynite/: AddAmbiguousSuccessors.h  Bifurcation_2.c  CalculateMorphologyScore.h  CleanUpTools.c  CleanUpTools.h  CompileDensityDistrib.c  CountCells.h  DrawSphere.c  ExtendBranch.c  ForwardBranchInfo.c  FourCellID.c  FreeParameters.h  GetImageStacks.c  GetImageStacks.h  LocalDensityCut_3D.c  LocalDensityStat.c  LocalDensityStat.h  LocalMaxima_3D.h  LocalWeightScan_3D.h  MakeTools.h  Makefile.am  MarkCentroid.c  MissingCells.h  NucInit.c  NucInit.h  NucReCenter.c  NucWeight.c  PolarBodies.c  ReduceAmbiguity.h  RefineNuclei.h  RemoveCell.h  RemoveGhostNuclei.h  ReportIrregularity.h  RotateAxis.c  ScoringDeath.c  ScoringDeath.h  ScoringDivisionTiming.h  ScoringExtensionTiming.h  SelfDistanceFilter.h  SetPixel.h  (+42 more)
worm/tools/starrynite-code/lib/starrynite-py/: .gitignore  Makefile.am
worm/tools/starrynite-code/lib/starrynite-xml/: Makefile.am
worm/tools/starrynite-code/lib/starrynite/tests/: Makefile.in
worm/tools/starrynite-code/tests/gnulib/: Makefile.am
(+697 files in other folders)
