SUBDIRS = . tests

AM_CPPFLAGS = -I"$(top_builddir)/lib/gnulib" -DDATADIR='"$(pkgdatadir)"'

BUILT_SOURCES = lookup_parameter.c
CLEANFILES =
EXTRA_DIST = svm_feature_ranges.txt svm_model_parameters.txt
MAINTAINERCLEANFILES = lookup_parameter.c

pkgdata_DATA = svm_feature_ranges.txt \
  svm_model_parameters.txt \
 # end list

noinst_LTLIBRARIES = libstarrynite.la

libstarrynite_la_SOURCES = \
  add_ambiguous_predecessors.c \
  add_ambiguous_predecessors.h \
  AddAmbiguousSuccessors.c \
  AddAmbiguousSuccessors.h \
  AddLink.c \
  AddLink.h \
  AddRow.c \
  AddRow.h \
  AlignDiamond.c \
  AlignDiamond.h \
  allocate_sphere_memory.c \
  allocate_sphere_memory.h \
  BackAssignment.c \
  BackAssignment.h \
  BackwardBranchInfo.c \
  BackwardBranchInfo.h \
  Bifurcation_1.c \
  Bifurcation_1.h \
  Bifurcation_2.c \
  Bifurcation_2.h \
  CalculateMorphologyScore.c \
  CalculateMorphologyScore.h \
  CalculateSizeParameters.c \
  CalculateSizeParameters.h \
  CalculateTimingScore.c \
  CalculateTimingScore.h \
  CalibrateNoise_3D.c \
  CalibrateNoise_3D.h \
  calibrate-noise.c \
  calibrate-noise.h \
  cell-identity.h \
  centroid_t.h \
  CleanUpFrame.c \
  CleanUpFrame.h \
  CleanUpTools.c \
  CleanUpTools.h \
  colors.h \
  compare_morphology.c \
  compare_morphology.h \
  compare_partner_distance.c \
  compare_partner_distance.h \
  CompileDensityDistrib.c \
  CompileDensityDistrib.h \
  CountCells.c \
  CountCells.h \
  CountUnambiguousMatches.c \
  CountUnambiguousMatches.h \
  Crust.c \
  Crust.h \
  DefineNuclei.c \
  DefineNuclei.h \
  DensityCut_2D.c \
  DensityCut_2D.h \
  DensityFilter.c \
  DensityFilter.h \
  DistanceFilter.c \
  DistanceFilter.h \
  DrawNuclei.c \
  DrawNuclei.h \
  DrawSphere.c \
  DrawSphere.h \
  DumpParameters.c \
  DumpParameters.h \
  Encroached.c \
  Encroached.h \
  enum_nucleus_end_states.h \
  enum_nucleus_start_states.h \
  error-codes.h \
  EvaluateDivision.c \
  EvaluateDivision.h \
  EvaluateLinks.c \
  EvaluateLinks.h \
  ExtendBranch.c \
  ExtendBranch.h \
  extend_nuclei.c \
  extend_nuclei.h \
  FinalizeParameters.c \
  FinalizeParameters.h \
  ForwardBranchInfo.c \
  ForwardBranchInfo.h \
  FourCellIDAssignment.c \
  FourCellIDAssignment.h \
  FourCellID.c \
  FourCellID.h \
  frame_t.h \
  FreeImageStack.c \
  FreeImageStack.h \
  FreeParameters.c \
  FreeParameters.h \
  get_image_pathname.c \
  get_image_pathname.h \
  GetImageStacks.c \
  GetImageStacks.h \
  get_pixel_index.h \
  identify-nuclei.c \
  identify-nuclei.h \
  IdentityAssignment.c \
  IdentityAssignment.h \
  image_dims_t.h \
  image_info_t.h \
  image-stacks.h \
  InitialID.c \
  InitialID.h \
  initialize_ghost.c \
  initialize_ghost.h \
  initialize_slice.c \
  initialize_slice.h \
  init_metric.c \
  init_metric.h \
  IntroduceAmbiguity.c \
  IntroduceAmbiguity.h \
  label_axis_early.c \
  label_axis_early.h \
  label_axis_late.c \
  label_axis_late.h \
  link_nearest_predecessors.c \
  link_nearest_predecessors.h \
  LoadParameterFile.c \
  LoadParameterFile.h \
  LocalDensityCut_3D.c \
  LocalDensityCut_3D.h \
  LocalDensityStat.c \
  LocalDensityStat.h \
  LocalMaxima_3D.c \
  LocalMaxima_3D.h \
  LocalWeightScan_2D.c \
  LocalWeightScan_2D.h \
  LocalWeightScan_3D.c \
  LocalWeightScan_3D.h \
  logfile.c \
  logfile.h \
  lookup_parameter.c \
  lookup_parameter.gperf \
  lookup_parameter.h \
  make_message.h \
  MakeTools.c \
  MakeTools.h \
  MarkCentroid.c \
  MarkCentroid.h \
  max_scan_y.c \
  max_scan_y.h \
  MeasureMorphology.c \
  MeasureMorphology.h \
  metric_calculate_distance.c \
  metric_calculate_distance.h \
  metric_calculate_distance_squared.c \
  metric_calculate_distance_squared.h \
  metric_t.h \
  MissingCells.c \
  MissingCells.h \
  MorphologyScores.c \
  MorphologyScores.h \
  movie_t.h \
  NewBornID.c \
  NewBornID.h \
  noise-filter.h \
  NucInit.c \
  NucInit.h \
  nucleus_can_join_predecessor.c \
  nucleus_can_join_predecessor.h \
  nucleus_join_predecessor.c \
  nucleus_join_predecessor.h \
  nucleus_list_init_p_partners.h \
  nucleus_list_init_predecessor_distances.h \
  nucleus_list_init_s_partners.h \
  nucleus_list/nucleus_list_init_p_partners.c \
  nucleus_list/nucleus_list_init_predecessor_distances.c \
  nucleus_list/nucleus_list_init_s_partners.c \
  nucleus_list/nucleus_list_sort_predecessor_partners.c \
  nucleus_list/nucleus_list_sort_successor_partners.c \
  nucleus_list/nucleus_list_try_joining_predecessors.c \
  nucleus_list_sort_predecessor_partners.h \
  nucleus_list_sort_successor_partners.h \
  nucleus_list_try_joining_predecessors.h \
  nucleus_sort_predecessor_partners.c \
  nucleus_sort_predecessor_partners.h \
  nucleus_sort_successor_partners.c \
  nucleus_sort_successor_partners.h \
  nucleus_t.h \
  nucleus_try_joining_predecessor.c \
  nucleus_try_joining_predecessor.h \
  NucReCenter.c \
  NucReCenter.h \
  NucReSize.c \
  NucReSize.h \
  NucWeight.c \
  NucWeight.h \
  parameter_t.h \
  param-file.c \
  param-file.h \
  partner_t.h \
  PizzaSlices.c \
  PizzaSlices.h \
  PolarBodies.c \
  PolarBodies.h \
  ReadImageStack.c \
  ReadImageStack.h \
  RecordDivision.c \
  RecordDivision.h \
  record_max.c \
  record_max.h \
  RecoverNuclei.c \
  RecoverNuclei.h \
  ReduceAmbiguity.c \
  ReduceAmbiguity.h \
  reestablish_max.c \
  reestablish_max.h \
  RefineNuclei.c \
  RefineNuclei.h \
  RemoveCell.c \
  RemoveCell.h \
  RemoveGhostNuclei.c \
  RemoveGhostNuclei.h \
  RemoveLink.c \
  RemoveLink.h \
  ReportIrregularity.c \
  ReportIrregularity.h \
  report-lineage.c \
  report-lineage.h \
  report_noise_model.c \
  report_noise_model.h \
  ResetBranch.c \
  ResetBranch.h \
  ResetNuclei.c \
  ResetNuclei.h \
  ResolveAmbiguity.c \
  ResolveAmbiguity.h \
  RotateAxis.c \
  RotateAxis.h \
  run_starrynite.c \
  run_starrynite.h \
  run_starrynite_continuation_t.h \
  ScoringDeath.c \
  ScoringDeath.h \
  ScoringDivision.c \
  ScoringDivision.h \
  ScoringDivisionTiming.c \
  ScoringDivisionTiming.h \
  ScoringExtension.c \
  ScoringExtension.h \
  ScoringExtensionTiming.c \
  ScoringExtensionTiming.h \
  SelfDistanceFilter.c \
  SelfDistanceFilter.h \
  SetCutoff.c \
  SetCutoff.h \
  SetPixel.c \
  SetPixel.h \
  SetupInitialFrame.c \
  SetupInitialFrame.h \
  SetupMovie.c \
  SetupMovie.h \
  SisterID.c \
  SisterID.h \
  SkipComplexity.c \
  SkipComplexity.h \
  Smoothing.c \
  Smoothing.h \
  SmoothingNoiseModel.c \
  SmoothingNoiseModel.h \
  SortPartners.c \
  SortPartners.h \
  Sponginess.c \
  Sponginess.h \
  starrynite_main.h \
  starrynite_main.c \
  struct_centroid.c \
  struct_centroid.h \
  struct_frame.h \
  struct_image_dims.c \
  struct_image_dims.h \
  struct_image_info.c \
  struct_image_info.h \
  struct_metric.h \
  struct_nucleus.h \
  struct_partner.h \
  svm_classifier.c \
  svm_classifier.h \
  tiff-io.c \
  tiff-io.h \
  TimeToDivide.c \
  TimeToDivide.h \
  TimingScores.c \
  TimingScores.h \
  tool_t.h \
  Trace.c \
  Trace.h \
  TurnGreen.c \
  TurnGreen.h \
  types.h \
  UnambiguousMatch.c \
  UnambiguousMatch.h \
  UpdateBranchInfo.c \
  UpdateBranchInfo.h \
  UpdateCounts.c \
  UpdateCounts.h \
  update_max.c \
  update_max.h \
  UpdateNoise.c \
  UpdateNoise.h \
  UpdateNucSize.c \
  UpdateNucSize.h \
  UpdateTimeInfo.c \
  UpdateTimeInfo.h \
  vector_subtract_vector.c \
  vector_subtract_vector.h \
  xalloc.h \
  xmalloc.c \
  xmalloc.h \
 # end list
libstarrynite_la_LIBADD = $(top_builddir)/lib/gnulib/libgnu.la -lm

lookup_parameter.c: lookup_parameter.gperf
	@GPERF@ --lookup-function-name=lookup_parameter \
	    --output-file="$@" "$<"
